fix: blocked the overflow elements

--- a/CL_first_project/youngkwon/static/css/style.css
+++ b/CL_first_project/youngkwon/static/css/style.css
@@ -2,12 +2,12 @@ html {
     margin: 0;
     padding: 0;
     height: 100%;
-
 }
 
 body {
     background-color: #00121f;
     height: 100%;
+    overflow: hidden;
 }
 
 #bgVideo {
@@ -17,6 +17,8 @@ body {
     max-width: 100%;
     min-width: 100%;
     min-height: 100%;
+    width: 100%;
+    height: 100%;;
     z-index: -1;
 }
 
@@ -78,13 +80,13 @@ body {
 }
 
 #cookie05 {
-    bottom: -50%;
+    bottom: -70%;
     left: 24%;
     transform: translate(0%, -80%);
 }
 
 #cookie06 {
-    bottom: -50%;
+    bottom: -70%;
     right: 24%;
     transform: translate(0%, -80%);
 }
@@ -200,30 +202,30 @@ body {
 
 @keyframes ani_cookie05 {
     0% {
-        bottom: -60%;
+        bottom: -70%;
         left: 24%;
     }
     50% {
-        bottom: -30%;
-        left: 30%;
+        bottom: -40%;
+        left: 28%;
     }
     100% {
-        bottom: 0%;
-        left: 36%;
+        bottom: -10%;
+        left: 34%;
     }
 }
 
 @keyframes ani_cookie06 {
     0% {
-        bottom: -60%;
+        bottom: -70%;
         right: 24%;
     }
     50% {
-        bottom: -30%;
-        right: 30%;
+        bottom: -40%;
+        right: 28%;
     }
     100% {
-        bottom: 0%;
-        right: 36%;
+        bottom: -10%;
+        right: 34%;
     }
 }
